add Courses section

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
         </nav>
       </header>
 
-      <main class="lg:px-12 flex flex-col gap-6 md:gap-16 pb-20">
+      <main class="lg:px-12 px-3 flex flex-col gap-16 pb-20">
         <!-- Heros Section -->
 
         <section>
@@ -470,7 +470,7 @@
             >
               <!-- box 1 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">01</p>
@@ -506,7 +506,7 @@
               </div>
               <!-- box 2 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">02</p>
@@ -540,7 +540,7 @@
               </div>
               <!-- box 3 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">03</p>
@@ -576,7 +576,7 @@
               </div>
               <!-- box 4 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">04</p>
@@ -610,7 +610,7 @@
               </div>
               <!-- box 5 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">05</p>
@@ -646,7 +646,7 @@
               </div>
               <!-- box 6 -->
               <div
-                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+                class="flex flex-col rounded-lg gap-10 p-5 md:p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
               >
                 <div class="flex justify-end">
                   <p class="text-6xl font-bold">06</p>
@@ -678,6 +678,345 @@
                       />
                     </svg>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Courses Section -->
+        <section>
+          <div class="flex flex-col gap-10 md:gap-16">
+            <div class="grid grid-cols-1 sm:grid-cols-6 gap-5 sm:gap-0">
+              <div class="sm:col-span-4 flex flex-col gap-2">
+                <h2 class="text-4xl font-semibold">Our Courses</h2>
+                <p class="text-lightCustomGrey">
+                  Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
+                  eget elit id imperdiet et. Cras eu sit dignissim lorem nibh
+                  et. Ac cum eget habitasse in velit fringilla feugiat senectus
+                  in.
+                </p>
+              </div>
+              <div class="sm:col-start-6 flex sm:justify-end items-end">
+                <button
+                  class="px-5 py-3 bg-white rounded-lg transition-all duration-200 hover:bg-CustomOrange hover:text-white"
+                >
+                  View All
+                </button>
+              </div>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-5 gap-y-8">
+              <!-- Card 1  -->
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/Web-Design-Fundamentals.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          4 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Beginner
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By John Smith</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">
+                        Web Design Fundamentals
+                      </h3>
+                      <p class="text-lightCustomGrey">
+                        Learn the fundamentals of web design, including HTML,
+                        CSS, and responsive design principles. Develop the
+                        skills to create visually appealing and user-friendly
+                        websites.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
+                </div>
+              </div>
+              <!-- Card 2  -->
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/UI&UX-Design.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          6 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Intermediate
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By Emily Johnson</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">UI/UX Design</h3>
+                      <p class="text-lightCustomGrey">
+                        Master the art of creating intuitive user interfaces
+                        (UI) and enhancing user experiences (UX). Learn design
+                        principles, wireframing, prototyping, and usability
+                        testing techniques.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
+                </div>
+              </div>
+              <!-- Card 3  -->
+
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/Mobile-App-Development.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          8 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Intermediate
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By David Brown</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">
+                        Mobile App Development
+                      </h3>
+                      <p class="text-lightCustomGrey">
+                        Dive into the world of mobile app development. Learn to
+                        build native iOS and Android applications using
+                        industry-leading frameworks like Swift and Kotlins.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
+                </div>
+              </div>
+              <!-- Card 4  -->
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/Graphic-Design-for-Beginners.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          10 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Beginner
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By Sarah Thompson</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">
+                        Graphic Design for Beginners
+                      </h3>
+                      <p class="text-lightCustomGrey">
+                        Discover the fundamentals of graphic design, including
+                        typography, color theory, layout design, and image
+                        manipulation techniques. Create visually stunning
+                        designs for print and digital media.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
+                </div>
+              </div>
+              <!-- Card 5  -->
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/Front-End-Web-Development.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          10 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Intermediate
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By Michael Adams</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">
+                        Front-End Web Development
+                      </h3>
+                      <p class="text-lightCustomGrey">
+                        Become proficient in front-end web development. Learn
+                        HTML, CSS, JavaScript, and popular frameworks like
+                        Bootstrap and React. Build interactive and responsive
+                        websites.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
+                </div>
+              </div>
+              <!-- Card 6  -->
+              <div
+                class="bg-white p-5 md:p-10 rounded-lg flex flex-col gap-6 hover:-translate-y-3 hover:shadow-xl transition-all duration-300"
+              >
+                <div class="flex gap-6 flex-col">
+                  <div>
+                    <img
+                      src="../public/asset/homepage/Advance-Js-image.png"
+                      alt="Web-Design-Fundamentals"
+                      class="w-full h-full"
+                    />
+                  </div>
+                  <div class="flex gap-6 flex-col">
+                    <div
+                      class="flex sm:items-center justify-between flex-col sm:flex-row gap-6"
+                    >
+                      <div class="flex gap-2">
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          6 Weeks
+                        </div>
+                        <div
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md"
+                        >
+                          Advance
+                        </div>
+                      </div>
+                      <div>
+                        <p class="text-sm font-medium">By Jennifer Wilson</p>
+                      </div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                      <h3 class="font-semibold text-xl">Advanced JavaScript</h3>
+                      <p class="text-lightCustomGrey">
+                        Take your JavaScript skills to the next level. Explore
+                        advanced concepts like closures, prototypes,
+                        asynchronous programming, and ES6 features. Build
+                        complex applications with confidence.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="w-full py-3 px-1 rounded-lg bg-mainbgColor hover:bg-gray-100 transition-all duration-200"
+                  >
+                    Get it Now
+                  </button>
                 </div>
               </div>
             </div>
