fox hovering of home page

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <title>E-learning</title>
   </head>
-  <body class="bg-mainbgColor font-Be-Vietnam-Pro">
+  <body class="bg-mainbgColor text-darkCustomGrey font-Be-Vietnam-Pro">
     <div class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto">
       <header class="flex flex-col gap-6">
         <div
@@ -59,35 +59,35 @@
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-gray-200 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block bg-darkCustomGrey/25"
                   >Home</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-gray-200 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
                   >Courses</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-gray-200 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-gray-200 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
                   >Pricing</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-gray-200 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
                   >Contact</a
                 >
               </li>
@@ -98,12 +98,12 @@
             <div class="flex gap-2 sm:gap-4">
               <a
                 href="#"
-                class="px-5 py-3 hover:bg-CustomOrange rounded-lg hover:text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg hover:text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
                 >Sign Up</a
               >
               <a
                 href="#"
-                class="px-5 py-3 bg-CustomOrange hover:bg-CustomOrangesecondary rounded-lg text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 bg-CustomOrange rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
                 >Login</a
               >
             </div>
@@ -129,7 +129,6 @@
 
       <main class="lg:px-12 px-3 flex flex-col gap-16 pb-20">
         <!-- Heros Section -->
-
         <section>
           <div class="grid grid-cols-6 min-h-96 mt-6">
             <div
@@ -188,12 +187,12 @@
               <div class="flex gap-3">
                 <a
                   href="#"
-                  class="p-3 md:px-5 md:py-4 rounded-lg bg-CustomOrange hover:bg-CustomOrangesecondary transition-all duration-200 text-white"
+                  class="p-3 md:px-5 md:py-4 bg-CustomOrange rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg text-white transition-all duration-300"
                   >Explore Courses</a
                 >
                 <a
                   href="#"
-                  class="p-3 md:px-5 md:py-4 rounded-lg bg-white hover:bg-CustomOrange transition-all duration-200 hover:text-white"
+                  class="p-3 md:px-5 md:py-4 rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg hover:text-white ttransition-all duration-200"
                   >View Pricing</a
                 >
               </div>
@@ -458,7 +457,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 bg-white rounded-lg transition-all duration-200 hover:bg-CustomOrange hover:text-white"
+                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
                 >
                   View All
                 </button>
@@ -698,7 +697,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 bg-white rounded-lg transition-all duration-200 hover:bg-CustomOrange hover:text-white"
+                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
                 >
                   View All
                 </button>
@@ -1018,6 +1017,29 @@
                     Get it Now
                   </button>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Testimonial Section -->
+        <section>
+          <div>
+            <div class="grid grid-cols-1 sm:grid-cols-6 gap-5 sm:gap-0">
+              <div class="sm:col-span-4 flex flex-col gap-2">
+                <h2 class="text-4xl font-semibold">Our Testimonials</h2>
+                <p class="text-lightCustomGrey">
+                  Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
+                  eget elit id imperdiet et. Cras eu sit dignissim lorem nibh
+                  et. Ac cum eget habitasse in velit fringilla feugiat senectus
+                  in.
+                </p>
+              </div>
+              <div class="sm:col-start-6 flex sm:justify-end items-end">
+                <button
+                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
+                >
+                  View All
+                </button>
               </div>
             </div>
           </div>
