fix testimonial section

--- a/public/index.html
+++ b/public/index.html
@@ -1122,18 +1122,18 @@
               <div class="bg-white rounded-lg border">
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
-                    The web design course provided a solid foundation for me.
-                    The instructors were knowledgeable and supportive, and the
-                    interactive learning environment was engaging. I highly
-                    recommend it!
+                    The UI/UX design course exceeded my expectations. The
+                    instructor's expertise and practical assignments helped me
+                    improve my design skills. I feel more confident in my career
+                    now. Thank you!
                   </p>
                 </div>
                 <div
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/sarah.png" alt="Sarah" />
-                    <p class="font-semibold text-sm md:text-base">Sarah L</p>
+                    <img src="../public/asset/homepage/Jason.png" alt="Sarah" />
+                    <p class="font-semibold text-sm md:text-base">Jasom M</p>
                   </div>
                   <div>
                     <button
@@ -1148,18 +1148,18 @@
               <div class="bg-white rounded-lg border">
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
-                    The web design course provided a solid foundation for me.
-                    The instructors were knowledgeable and supportive, and the
-                    interactive learning environment was engaging. I highly
-                    recommend it!
+                    The mobile app development course was fantastic! The
+                    step-by-step tutorials and hands-on projects helped me grasp
+                    the concepts easily. I'm now building my own app. Great
+                    course!
                   </p>
                 </div>
                 <div
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/sarah.png" alt="Sarah" />
-                    <p class="font-semibold text-sm md:text-base">Sarah L</p>
+                    <img src="../public/asset/homepage/emily.png" alt="Sarah" />
+                    <p class="font-semibold text-sm md:text-base">Emily R</p>
                   </div>
                   <div>
                     <button
@@ -1174,18 +1174,21 @@
               <div class="bg-white rounded-lg border">
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
-                    The web design course provided a solid foundation for me.
-                    The instructors were knowledgeable and supportive, and the
-                    interactive learning environment was engaging. I highly
-                    recommend it!
+                    I enrolled in the graphic design course as a beginner, and
+                    it was the perfect starting point. The instructor's guidance
+                    and feedback improved my design abilities significantly. I'm
+                    grateful for this course!
                   </p>
                 </div>
                 <div
                   class="bg-gray-200/20 p-5 md:p-10 border-t flex items-center justify-between"
                 >
                   <div class="flex items-center gap-2">
-                    <img src="../public/asset/homepage/sarah.png" alt="Sarah" />
-                    <p class="font-semibold text-sm md:text-base">Sarah L</p>
+                    <img
+                      src="../public/asset/homepage/micheal.png"
+                      alt="Sarah"
+                    />
+                    <p class="font-semibold text-sm md:text-base">Micheal K</p>
                   </div>
                   <div>
                     <button
